--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
             "Model\\": "model/",
             "Service\\": "service/"
         }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^5.0"
     }
 }
